fixed node linking

--- a/assets/less/sidebar.less
+++ b/assets/less/sidebar.less
@@ -11,6 +11,7 @@
   border-left: 1px solid @sidebar-border-color;
   min-width: 400px;
   width: 400px;
+  margin-top: 64px;
 
   background: #FFF;
 
