Fix styling for node setup

--- a/assets/less/sidebar.less
+++ b/assets/less/sidebar.less
@@ -209,3 +209,11 @@
     line-height: @sidebar-toolbar-height;
   }
 }
+
+.sidebar__flow-node-setup {
+  .flex;
+  .flex-display;
+  .flex-direction(column);
+  .justify-content(center);
+  padding: @sidebar-body-padding;
+}
