--- a/assets/less/flow-nodes.less
+++ b/assets/less/flow-nodes.less
@@ -119,6 +119,22 @@
   }
 }
 
+.flow-node-editor-help-block {
+  border-radius: 2px;
+  margin-bottom: 12px;
+  padding: 6px;
+
+  background: white;
+
+  p {
+    margin: 0;
+
+    font-size: 13px;
+    line-height: 1.5;
+  }
+}
+
+
 /*.flow-node-editor {
   position: absolute;
   max-height: 450px;
