Add no matches found text for filtered nodes

--- a/assets/less/node-collection.less
+++ b/assets/less/node-collection.less
@@ -36,3 +36,12 @@
   margin: 0;
   line-height: 1.4;
 }
+
+
+.node-collection-no-matches {
+  margin-top: 20px;
+  width: 100%;
+
+  color: #8b8b8b;
+  text-align: center;
+}
