--- a/.kubernetes/deploy/app-octoblu-sidebar-blue-service.yaml.tmpl
+++ b/.kubernetes/deploy/app-octoblu-sidebar-blue-service.yaml.tmpl
@@ -1,4 +1,4 @@
-id: app-octoblu-blue
+id: app-octoblu-sidebar-blue
 kind: Service
 apiVersion: v1beta1
 port: $BLUE_PORT
@@ -9,7 +9,7 @@ publicIPs:
   - 172.20.0.12
   - 172.20.0.13
 labels:
-  name: app-octoblu-frontend-blue
+  name: app-octoblu-sidebar-blue
   version: 1.0.0
 selector:
-  name: app-octoblu-frontend-blue
+  name: app-octoblu-sidebar-blue
