--- a/.kubernetes/docker-builder/docker-builder-pod.yaml.tmpl
+++ b/.kubernetes/docker-builder/docker-builder-pod.yaml.tmpl
@@ -26,7 +26,7 @@ desiredState:
           - name: GIT_BRANCH
             value: $TRAVIS_BRANCH
           - name: IMAGE_NAME
-            value: $TRAVIS_REPO_SLUG:$SHORT_COMMIT
+            value: app-octoblu-sidebar:$SHORT_COMMIT
           - name: USERNAME
             value: $DOCKER_USERNAME
           - name: PASSWORD
