--- a/.kubernetes/docker-builder/docker-builder-pod.yaml.tmpl
+++ b/.kubernetes/docker-builder/docker-builder-pod.yaml.tmpl
@@ -19,8 +19,8 @@ desiredState:
         env:
           - name: SKIP_CLEAN
             value: "true"
-          - name: GIT_REPO
-            value: https://github.com/$TRAVIS_REPO_SLUG.git
+          - name: TGZ_URL
+            value: $TGZ_URL
           - name: GIT_TAG
             value: $TRAVIS_COMMIT
           - name: GIT_BRANCH
