--- a/.kubernetes/deploy/app-octoblu-frontend-green-service.yaml.tmpl
+++ b/.kubernetes/deploy/app-octoblu-frontend-green-service.yaml.tmpl
@@ -1,4 +1,4 @@
-id: app-octoblu-sidebar-green
+id: app-octoblu-green
 kind: Service
 apiVersion: v1beta1
 port: $GREEN_PORT
@@ -9,7 +9,7 @@ publicIPs:
   - 172.20.0.12
   - 172.20.0.13
 labels:
-  name: app-octoblu-sidebar-green
+  name: app-octoblu-frontend-green
   version: 1.0.0
 selector:
-  name: app-octoblu-sidebar-green
+  name: app-octoblu-frontend-green
