--- a/.kubernetes/docker-builder/appspec.yml.tmpl
+++ b/.kubernetes/docker-builder/appspec.yml.tmpl
@@ -2,7 +2,7 @@ version: 0.0
 os: linux
 files:
   - source: /
-    destination: /deploy/docker-builder/octoblu/app-octoblu-sidebar/$TRAVIS_COMMIT
+    destination: /deploy/docker-builder/$TRAVIS_REPO_SLUG/$TRAVIS_COMMIT
 hooks:
   ApplicationStart:
     - location: application_start
