Made tabs more obvious, added debug placeholder

--- a/assets/less/flow.less
+++ b/assets/less/flow.less
@@ -743,6 +743,15 @@ ul.flow-browser-debug {
   }
 }
 
+.flow-browser-debug-no-debug-data {
+  padding: 0 12px;
+  width: 100%;
+
+  line-height: 1.5;
+  color: #8b8b8b;
+  text-align: center;
+}
+
 .flow-browser {
   box-shadow: rgba(0, 0, 0, 0.298039) 3px 0 0 0;
   background-color: rgba(245, 245, 245, 0.8);
