--- a/assets/less/sidebar.less
+++ b/assets/less/sidebar.less
@@ -1,6 +1,6 @@
 @sidebar-border-color  : #E5E5E5;
 @sidebar-toolbar-height: 36px;
-@sidebar-button-color  : rgba(0,0,0,0.54);
+@sidebar-button-color  : rgba(0,0,0,0.4);
 @sidebar-body-padding  : 12px;
 @sidebar-header-color  : #3C3D3E;
 
@@ -113,6 +113,7 @@
 
   &:hover {
     text-decoration: none;
+    color: @sidebar-header-color;
   }
 
   &:focus {
