--- a/assets/less/sidebar.less
+++ b/assets/less/sidebar.less
@@ -10,13 +10,20 @@
   .flex-direction(column);
 
   border-left: 1px solid #C5C5C5;
-  min-width: 400px;
-  width: 400px;
   margin-top: 64px;
+  width: 0;
 
   background: #FFF;
-
+  opacity: 0;
   overflow: hidden;
+
+  -webkit-transition: all 0.3s;
+          transition: all 0.3s;
+}
+
+.sidebar--is-expanded {
+  width: 400px;
+  opacity: 1;
 }
 
 .sidebar__pane {
@@ -57,6 +64,17 @@
     padding-top: 10px;
     padding-bottom: 10px;
   }
+}
+
+.sidebar__toggle-button {
+  position: absolute;
+  top: 50%;
+  right: 400px;
+
+  height: 50px;
+  width: 50px;
+
+  background-color: white;
 }
 
 .sidebar__toolbar {
