beautify node editor loading icon

--- a/assets/less/sidebar.less
+++ b/assets/less/sidebar.less
@@ -241,3 +241,12 @@
   .justify-content(center);
   padding: @sidebar-body-padding;
 }
+
+.sidebar__loading-icon {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  color: @sidebar-button-color;
+}
