Clean up sidebar and remove flow browser

--- a/assets/less/sidebar.less
+++ b/assets/less/sidebar.less
@@ -48,22 +48,36 @@
   .justify-content(space-between);
 }
 
-
 .sidebar__pane-body {
   .flex(1);
   .flex-display;
   .flex-direction(column);
 
-  background: #f9fbfc;
+  background: #F9FBFC;
   overflow-y: auto;
-  height: 0;
+  height: 0; /* resolves weird flexbox issue */
 
   md-header {
     height: auto;
   }
+
   md-tab {
     padding-top: 10px;
     padding-bottom: 10px;
+
+  }
+}
+
+.sidebar__pane-form {
+  padding: @sidebar-body-padding;
+
+  md-input-container {
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+  md-switch {
+    margin: 0;
   }
 }
 
@@ -83,6 +97,7 @@
 
   width: 100%;
   height: @sidebar-toolbar-height;
+
   color: #333;
 
   .md-toolbar-tools {
@@ -106,6 +121,7 @@
 
 .sidebar__toolbar--footer {
   .align-self(flex-end);
+
   border-top: 1px solid @sidebar-border-color;
 
   .sidebar__toolbar-button {
@@ -155,20 +171,6 @@
   }
 }
 
-.sidebar__pane-form {
-  padding: @sidebar-body-padding;
-
-  md-input-container {
-    padding-left: 0;
-    padding-right: 0;
-  }
-
-  md-switch {
-    margin: 0;
-  }
-}
-
-
 .sidebar__filter-form {
   .flex(1);
   .flex-display();
@@ -195,7 +197,6 @@
   top: -1px;
   left: 9px;
 
-
   &.fa {
     color: @sidebar-button-color;
     font-size: 14px;
@@ -208,6 +209,7 @@
   .flex-display;
   .flex-direction(column);
   .justify-content(center);
+
   padding: @sidebar-body-padding;
 }
 
