made the sorting prettier

--- a/assets/less/flow-directory.less
+++ b/assets/less/flow-directory.less
@@ -39,9 +39,11 @@
 }
 
 .directory__header {
+  .flex-display;
   padding: 0 16px;
 }
 .directory__header-text {
+  .flex(1);
   font-weight: normal;
 }
 .directory__flows {
@@ -190,7 +192,7 @@
 .directory__collection-name {
   margin: 0;
   font-size: 32px;
-  
+
 }
 
 .directory__collection--home {
