now it looks less bad

--- a/assets/less/sidebar.less
+++ b/assets/less/sidebar.less
@@ -343,3 +343,13 @@ md-divider.sidebar__section-divider {
 .node-in-flow__button--delete {
   .align-items(center);
 }
+
+.flexing-it {
+  .sidebar__section {
+    .flex(1);
+  }
+
+  .sidebar__section-nodes {
+    overflow: auto;
+  }
+}
