changed class name to less silly one

--- a/assets/less/sidebar.less
+++ b/assets/less/sidebar.less
@@ -343,7 +343,7 @@ md-divider.sidebar__section-divider {
   .align-items(center);
 }
 
-.flexing-it {
+.sidebar-section-expanded {
   .sidebar__section {
     .flex(1);
   }
