Add login with Citrix button

--- a/assets/less/auth.less
+++ b/assets/less/auth.less
@@ -3,12 +3,12 @@
 
 @text-color            : #F0F0F0;
 @background-color      : #F4F5F9;
-@citrix-button-color   : #000000;
+@citrix-button-color   : #343434;
 @email-button-color    : #009688;
 @google-button-color   : #DE4D36;
 @facebook-button-color : #3C5F96;
 @twitter-button-color  : #36A9DA;
-@github-button-color   : #444444;
+@github-button-color   : #5E5E5E;
 @primary-button-color  : #14568f;
 @secondary-button-color: transparent;
 
@@ -168,7 +168,7 @@
   display: block;
   width : 250px;
   height: 52px;
-  margin: 0 auto 25px;
+  margin: 0 auto 40px;
 }
 
 .auth__link {
