Alligned Inspector header to center.

--- a/assets/less/sidebar.less
+++ b/assets/less/sidebar.less
@@ -39,6 +39,8 @@
   color: @sidebar-header-color;
   font-weight: bold;
   text-transform: uppercase;
+  text-align: center;
+  width: 100%;
 }
 
 .sidebar__pane-content {
