--- a/assets/less/styles.less
+++ b/assets/less/styles.less
@@ -5,10 +5,10 @@
 
 body {
   .flex-display;
-  
+
   font-family: citrix-sans;
   min-height: 100%;
-  height: auto;
+  height: 100%;
 }
 
 .selected-item {
