collection view components

--- a/assets/less/manifest.less
+++ b/assets/less/manifest.less
@@ -42,6 +42,7 @@
 @import 'browse.less';
 @import 'auth.less';
 @import 'error.less';
+@import 'lookup.less';
 @import 'designer.less';
 @import 'designer/flow-top-bar.less';
 @import 'node-forms/compose.less';
