--- a/assets/less/sidebar.less
+++ b/assets/less/sidebar.less
@@ -12,14 +12,14 @@
 
   border-left: 1px solid @sidebar-border-color;
   margin-top: 64px;
-  width: @sidebar-width;
+  width: 0;
 
   background: #FFF;
   opacity: 0;
   overflow: hidden;
 
-  -webkit-transition: all 0.3s;
-          transition: all 0.3s;
+  -webkit-transition: all 0.2s;
+          transition: all 0.2s;
 }
 
 .sidebar--is-expanded {
