--- a/assets/less/designer.less
+++ b/assets/less/designer.less
@@ -81,16 +81,18 @@
 }
 
 .sidebar__expand-button {
-  top: 50%;
+  top: 40%;
   right: 400px;
 
+  height: 40px;
   margin-top: 13px;
-  padding: 0px 10px;
+  padding: 0px 13px;
 
-  background-color: #E7E7E7;
+  color: #737373;
+  background-color: white;
+
   border: 1px solid #c5c5c5;
   border-right: none;
-
   border-top-right-radius: 0;
   border-bottom-right-radius: 0;
 
