added styles and removed un-needed div

--- a/assets/less/designer.less
+++ b/assets/less/designer.less
@@ -93,8 +93,11 @@
 
   border: 1px solid #c5c5c5;
   border-right: none;
+  
   border-top-right-radius: 0;
   border-bottom-right-radius: 0;
+  border-top-left-radius: 2px;
+  border-bottom-left-radius: 2px;
 
   position: fixed;
 
