--- a/assets/less/lookup.less
+++ b/assets/less/lookup.less
@@ -1,20 +1,20 @@
 .lookup {
   position: relative;
+  margin-top: 4px;
 }
 
 .lookup__icon {
   position: absolute;
-  top: 14px;
-  left: 10px;
+  top: 9px;
+  right: 10px;
 
   color: #afb5b9;
 }
 
 .lookup__input {
-  border: 1px solid #CFD0D2;
+  border: 1px solid #EDEDED;
   border-radius: 2px;
-  padding: 10px 10px 10px 34px;
-
+  padding: 5px 34px 5px 10px;
   background-color: #E8EAEB;
 
   &:focus {
