--- a/assets/less/manifest.less
+++ b/assets/less/manifest.less
@@ -42,6 +42,8 @@
 @import 'browse.less';
 @import 'auth.less';
 @import 'error.less';
+@import 'tabs.less';
+@import 'interior.less';
 @import 'lookup.less';
 @import 'designer.less';
 @import 'designer/flow-top-bar.less';
