changed bluprints to look cleaner

--- a/assets/less/flow-blueprint.less
+++ b/assets/less/flow-blueprint.less
@@ -85,7 +85,7 @@
     .flex-display;
     .flex-direction(row);
     .flex-wrap(wrap);
-    .justify-content(space-between);
+    .justify-content(flex-end);
 
     padding-bottom: 16px;
   }
