Add random-robot directive

--- a/assets/less/manifest.less
+++ b/assets/less/manifest.less
@@ -41,6 +41,7 @@
 @import 'bluprints.less';
 @import 'browse.less';
 @import 'auth.less';
+@import 'random-robot.less';
 @import 'error.less';
 @import 'tabs.less';
 @import 'interior.less';
