--- a/assets/less/connected-nodes.less
+++ b/assets/less/connected-nodes.less
@@ -14,17 +14,30 @@
   .flex-display;
   .align-items(center);
   .flex-direction(row);
+
+  margin-bottom: 15px;
+
+  a:hover {
+    text-decoration: none;
+
+    .connected-node-name {
+      color: #555;
+    }
+  }
 }
+
 .connected-node-name {
-  font-weight: bold;
   text-align: center;
-  color: @gray;
+  color: #757575;
+  font-size: 13px;
+  font-weight: bold;
+  text-transform: uppercase;
 }
 
 .connected-node-thumbnail {
   width: 150px;
   height: 150px;
-  padding: 20px;
+  padding: 20px 20px 0;
   margin: 0 auto;
 }
 
@@ -44,7 +57,7 @@
   .justify-content(flex-end);
 
   display: none;
-  
+
   div {
     padding: 10px;
   }
