--- a/assets/less/sidebar.less
+++ b/assets/less/sidebar.less
@@ -278,6 +278,7 @@ md-divider.sidebar__section-divider {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  width: 275px;
 }
 
 
@@ -330,6 +331,7 @@ md-divider.sidebar__section-divider {
 }
 
 .node-in-flow__button {
+  .flex-display;
   .align-items(center);
 
   padding: 5px 0;
