fixed the designer

--- a/assets/less/designer/flow-top-bar.less
+++ b/assets/less/designer/flow-top-bar.less
@@ -14,7 +14,8 @@
     border: none;
     border-radius: 2px;
 
-    font-size: 0.85em;
+    font-size: 0.8em;
+    font-family: inherit;
 
     &:focus {
       border-color: #66afe9;
