--- a/assets/less/flow.less
+++ b/assets/less/flow.less
@@ -89,6 +89,10 @@
 md-sidenav.md-sidenav-left {
   width: 250px;
 
+  .navbar-button {
+    padding-top: 4px;
+  }
+
   .navbar-logo {
     width: auto;
 
