--- a/assets/less/node-collection.less
+++ b/assets/less/node-collection.less
@@ -30,6 +30,8 @@
 
 .node-collection-title {
   margin: 0 0 8px;
+  font-size: 1.17em;
+  font-weight: bold;
 }
 
 .node-collection-text {
@@ -37,11 +39,14 @@
   line-height: 1.4;
 }
 
-
 .node-collection-no-matches {
   margin-top: 20px;
   width: 100%;
 
   color: #8b8b8b;
   text-align: center;
+}
+
+.node-collection-container{
+  padding-top: 0;
 }
