removed important tags

--- a/assets/less/sidebar.less
+++ b/assets/less/sidebar.less
@@ -37,11 +37,11 @@
 
 .sidebar__pane-title {
   color: @sidebar-header-color;
-  font-weight: bold !important;
+  font-weight: bold;
   text-transform: uppercase;
   text-align: center;
   width: 100%;
-  font-size: 14px !important;
+  font-size: 14px;
 }
 
 .sidebar__pane-content {
