--- a/assets/less/node-wizard.less
+++ b/assets/less/node-wizard.less
@@ -18,14 +18,14 @@
 .node-wizard__logo {
   display: block;
   margin-bottom: 15px;
-  width: 50%;
+  width: 40%;
   height: auto;
 }
 
 .node-wizard__body {
-  .flex-display;
-  .flex-direction(column);
   .align-items(center);
+  .flex-direction(column);
+  .flex-display;
 
   width: 100%;
 }
@@ -37,8 +37,10 @@
 }
 
 .node-wizard__copy {
-  font-size: 18px;
+  margin: .83em 0;
   margin-bottom: 20px;
+
+  font-size: 1.5em;
 }
 
 .node-wizard__form {
@@ -53,7 +55,7 @@
 }
 
 .node-wizard__button {
-  padding: 10px 25px;
+  padding: 2px 25px;
 }
 
 .node-wizard__dialog {
