Added Nodes Page

--- a/assets/less/manifest.less
+++ b/assets/less/manifest.less
@@ -49,3 +49,4 @@
 @import 'designer.less';
 @import 'designer/flow-top-bar.less';
 @import 'node-forms/compose.less';
+@import 'blu/blu-loading.less';
