--- a/assets/less/bluprints.less
+++ b/assets/less/bluprints.less
@@ -14,6 +14,9 @@
     md-icon {
       margin: 5px 10px 0;
       font-size: 17px;
+      &:focus{
+        color: #EDEDED;
+      }
     }
 
     .md-input {
