Fixedcopy and import buttons, removed outline from search bar

--- a/assets/less/flow-directory.less
+++ b/assets/less/flow-directory.less
@@ -126,6 +126,7 @@
   margin-right: 0;
 }
 .directory__search-form {
+  outline: none;
   .flex-display;
   .flex-direction(row);
   .justify-content(space-between);
@@ -133,6 +134,7 @@
   margin-bottom: 35px;
 }
 .directory__search-input {
+  outline: inherit;
   border: 1px solid #dedede;
   padding: 13px 26px;
   width: 100%;
@@ -140,6 +142,7 @@
   line-height: 24px;
 }
 .directory__search-button {
+  outline: inherit;
   border: 1px solid #dedede;
   border-left: none;
   padding: 0 25px;
