--- a/assets/less/flow-blueprint.less
+++ b/assets/less/flow-blueprint.less
@@ -35,6 +35,7 @@
     .flex-display;
     .justify-content(flex-end);
     .flex-wrap(wrap);
+
     .action {
       .flex-display;
       .flex-direction(column);
@@ -44,7 +45,7 @@
 
       cursor: pointer;
       margin: 0;
-      padding: 16px;
+      padding: 10px 16px;
     }
   }
 
