Fixed font size on analyze page

--- a/assets/less/analyze.less
+++ b/assets/less/analyze.less
@@ -1,5 +1,9 @@
 .analyze-card {
   margin: 1em;
+
+  h2 {
+    font-size: .95em;
+  }
   .message {
     .message-frame {
       transition: 0.7s max-height;
