Fixed profile font sizes

--- a/assets/less/profile.less
+++ b/assets/less/profile.less
@@ -1,5 +1,13 @@
 .profile-card {
 
+  h1 {
+    font-size: 2em;
+  }
+
+  h2 {
+    font-size: 0.95em;
+  }
+
   md-input-container {
     margin: 10px;
     // padding-bottom: 0;
