fixed font size and weight for bluprint list in discover page

--- a/assets/less/flow-directory.less
+++ b/assets/less/flow-directory.less
@@ -20,6 +20,12 @@
       .flow-blueprint;
       margin-left: 16px;
     }
+
+    .name {
+      font-size: 1.3em;
+      font-weight: bold;
+    }
+
     @media @mobile, @tablet {
       .num-columns(1);
     }
