Replaced em values with px

--- a/assets/less/styles.less
+++ b/assets/less/styles.less
@@ -122,7 +122,7 @@ body {
 .process-row-space {
   padding: 16px 0px;
 
-  height: 3em;
+  height: 68px;
 
   .process-row-actions {
     font-size: 16px;
