added zebra styling for md-list in node-collection-list

--- a/assets/less/node-collection.less
+++ b/assets/less/node-collection.less
@@ -11,8 +11,17 @@
 
   cursor: pointer;
 
-  &:hover {
+  &:hover,
+  &:nth-child(odd):hover {
     background: white;
+  }
+
+  &:nth-child(odd) {
+    background: #F5F8FA;
+  }
+
+  button {
+    background: transparent !important;
   }
 }
 
