nodes in flow list names align left

--- a/assets/less/sidebar.less
+++ b/assets/less/sidebar.less
@@ -342,6 +342,9 @@ md-divider.sidebar__section-divider {
     height: 25px;
   }
 }
+.node-in-flow__node--name {
+  text-align: left; 
+}
 
 .node-in-flow__button--delete {
   .align-items(center);
