Removed outline from navbar

--- a/assets/less/material.less
+++ b/assets/less/material.less
@@ -12,6 +12,10 @@
     font-size: 1.5em;
   }
 
+  .navbar-item {
+    outline: none;
+  }
+
   .flow-image-but-really-the-flow {
     background-color: lightgrey;
     transition: 1s all;
