--- a/assets/less/lookup.less
+++ b/assets/less/lookup.less
@@ -19,6 +19,7 @@
 
   &:focus {
     background-color: #FFF;
+    outline: none;
 
     -webkit-transition: background-color 200ms linear;
        -moz-transition: background-color 200ms linear;
