moving flow rendering pan & zoom stuff from editor to renderer

--- a/assets/less/flow-nodes.less
+++ b/assets/less/flow-nodes.less
@@ -193,11 +193,9 @@
       stroke-width: 0;
 }
 
-.flow-editor-render-area {
-  &.grabby-hand {
+.grabby-hand {
   cursor: -webkit-grabbing;
   cursor: -moz-grabbing;
   cursor: -ms-grabbing;
   cursor: grabbing;
-  }
 }
