--- a/assets/less/designer.less
+++ b/assets/less/designer.less
@@ -1,3 +1,7 @@
+body {
+  overflow:hidden;
+}
+
 .designer-container {
   .flex(4);
   .flex-display;
@@ -93,7 +97,7 @@
 
   border: 1px solid #c5c5c5;
   border-right: none;
-  
+
   border-top-right-radius: 0;
   border-bottom-right-radius: 0;
   border-top-left-radius: 2px;
