--- a/assets/less/sidebar.less
+++ b/assets/less/sidebar.less
@@ -218,6 +218,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  margin: 60px 0;
 
   color: @sidebar-button-color;
 }
@@ -343,7 +344,7 @@ md-divider.sidebar__section-divider {
   }
 }
 .node-in-flow__node--name {
-  text-align: left; 
+  text-align: left;
 }
 
 .node-in-flow__button--delete {
