Let the nav lock open on larger screens, shrink the sidenav

--- a/assets/less/material.less
+++ b/assets/less/material.less
@@ -12,6 +12,10 @@
     font-size: 1.5em;
   }
 
+  md-sidenav.md-locked-open {
+    min-width: 250px;
+  }
+
   .flow-image-but-really-the-flow {
     background-color: lightgrey;
     transition: 1s all;
