added truncate class to node names in connect page

--- a/assets/less/connected-nodes.less
+++ b/assets/less/connected-nodes.less
@@ -32,6 +32,10 @@
   font-size: 13px;
   font-weight: bold;
   text-transform: uppercase;
+  &.truncate {
+    width: 135px;
+    margin: 0 auto;
+  }
 }
 
 .connected-node-thumbnail {
