--- a/assets/less/sidebar.less
+++ b/assets/less/sidebar.less
@@ -11,7 +11,7 @@
   .flex-direction(column);
 
   border-left: 1px solid @sidebar-border-color;
-  margin-top: 64px;
+  //margin-top: 64px;
   width: 0;
 
   background: #FFF;
