font-size tweaks

--- a/assets/less/profile.less
+++ b/assets/less/profile.less
@@ -5,7 +5,12 @@
   }
 
   h2 {
-    font-size: 28px;
+    font-size: inherit;
+  }
+
+  h3 {
+    font-size: 1.17em;
+    font-weight: bold;
   }
 
   md-input-container {
