--- a/assets/less/flow-directory.less
+++ b/assets/less/flow-directory.less
@@ -53,7 +53,7 @@
 
   margin: 0.83em 0;
 
-  font-size: 18px;
+  font-size: 1.5em;
   font-weight: normal;
   line-height: 2;
 }
@@ -160,7 +160,7 @@
   background: #f6f6f6;
   color: #b8b8b8;
   text-transform: uppercase;
-  font-weight: bold;
+  font-weight: 500;
   &:hover {
 
   }
