Fixed sidebar navbar-item hover styling

--- a/assets/less/material.less
+++ b/assets/less/material.less
@@ -14,6 +14,7 @@
 
   .navbar-item {
     outline: none;
+  }
 
   md-sidenav.md-locked-open {
     min-width: 250px;
@@ -42,10 +43,11 @@
 .md-button {
   min-width: 0;
   margin:0;
+}
 
 .navigation a {
   text-decoration: none;
   &:hover {
-    color: darken(rgba(0, 0, 0, 0.87), 10%);
+    font-weight: bold;
   }
 }
