finishing up configure page

--- a/assets/less/manifest.less
+++ b/assets/less/manifest.less
@@ -49,4 +49,5 @@
 @import 'designer.less';
 @import 'designer/flow-top-bar.less';
 @import 'node-forms/compose.less';
+@import 'blu/blu-buttons.less';
 @import 'blu/blu-loading.less';
