font sizing tweaks

--- a/assets/less/material.less
+++ b/assets/less/material.less
@@ -9,7 +9,7 @@
   }
 
   .page-heading {
-    font-size: 1.5em;
+    font-size: 27px;
   }
 
   .navbar-item {
@@ -50,4 +50,8 @@
   &:hover {
     font-weight: bold;
   }
+}
+
+.margin {
+  margin-left: -6px;
 }
