--- a/assets/less/manifest.less
+++ b/assets/less/manifest.less
@@ -15,6 +15,7 @@
 @import 'add-node.less';
 @import 'animations.less';
 @import 'device.less';
+@import 'device-collection.less';
 @import 'nodes.less';
 @import 'flow.less';
 @import 'flow-blueprint.less';
