moved search to flex-end

--- a/assets/less/interior.less
+++ b/assets/less/interior.less
@@ -17,7 +17,7 @@
     .flex;
     .flex-display;
     .flex-direction(row);
-    .justify-content(space-between);
+    .justify-content(flex-end);
   }
 }
 
