fixed generate token button on device details page

--- a/assets/less/device.less
+++ b/assets/less/device.less
@@ -141,7 +141,7 @@
         text-overflow: ellipsis;
         .md-button {
           line-height: 1;
-          margin-left: -6px;
+          padding-bottom: 8px;
         }
       }
     }
