--- a/assets/less/interior.less
+++ b/assets/less/interior.less
@@ -1,6 +1,7 @@
 .interior {
   max-width: 1240px;
   margin: 0 auto;
+  padding: 30px;
 }
 
 .interior__wrapper {
@@ -18,6 +19,8 @@
     .flex-display;
     .flex-direction(row);
     .justify-content(flex-end);
+    
+    padding: 0;
   }
 }
 
