--- a/assets/less/interior.less
+++ b/assets/less/interior.less
@@ -1,7 +1,7 @@
 .interior {
-  max-width: 1240px;
+  max-width: 1050px;
   margin: 0 auto;
-  padding: 30px;
+  padding: 30px 0;
 }
 
 .interior__wrapper {
@@ -19,8 +19,8 @@
     .flex-display;
     .flex-direction(row);
     .justify-content(flex-end);
-    
-    padding: 0;
+
+    padding: 0 0 15px;
   }
 }
 
