Who let the dogs out?!

--- a/assets/less/interior.less
+++ b/assets/less/interior.less
@@ -1,7 +1,7 @@
 .interior {
-  max-width: 1050px;
+  max-width: 1110px;
   margin: 0 auto;
-  padding: 30px 0;
+  padding: 30px;
 }
 
 .interior__wrapper {
@@ -10,7 +10,7 @@
 
 .interior__header {
   border-bottom: 1px solid #EDEDED;
-  padding: 30px 30px 0;
+  padding: 30px 0 0;
 
   background: #F9FBFC;
 
@@ -20,7 +20,7 @@
     .flex-direction(row);
     .justify-content(flex-end);
 
-    padding: 0 0 15px;
+    padding-bottom: 15px;
   }
 }
 
