Fixed outline on everything to none in material.less

--- a/assets/less/material.less
+++ b/assets/less/material.less
@@ -55,3 +55,8 @@
 .margin {
   margin-left: -6px;
 }
+
+//Doing this because Material Design v0.10.0 makes somethings with an ng-click are force 'fixed' by something odd, causing them all to have an outline.
+:focus {
+  outline: none;
+}
